--- a/sobremi.html
+++ b/sobremi.html
@@ -3,20 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sobre mí - Epic Customs</title>
+    <title>Epic Customs</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- CSS Personalizado -->
+    <!-- CSS Personalitzat -->
     <link rel="stylesheet" href="estils.css">
     <link rel="icon" href="imagenes/favicon.jpg" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
     <meta name="keywords" content="tuning coches, personalización vehículos, proyectos exclusivos, servicios de tuning">
+    <meta name="author" content="Ismael Achamrouk">
     <meta property="og:title" content="Epic Customs - Personalización de Coches">
     <meta property="og:description" content="Expertos en tuning y personalización de vehículos. Descubre servicios de tuning, proyectos exclusivos y contacto.">
     <meta property="og:image" content="imagenes/instalacion-video.jpg">
-    <meta property="og:url" content="139isac.github.io/EpicCustoms/">
+    <meta property="og:url" content="https://139isac.github.io/EpicCustoms/index.html">
+    <meta name="cookie-policy" content="Este sitio usa cookies para mejorar la experiencia.">
 
     <script src="animacion.js" defer></script>
+    <!-- Schema.org datos estructurados -->
+    <script type="application/ld+json">
+        {
+            "@context": "https://schema.org",
+            "@type": "Organization",
+            "name": "Epic Customs",
+            "url": "https://139isac.github.io/EpicCustoms/",
+            "logo": "https://139isac.github.io/EpicCustoms/logo.png",
+            "sameAs": [
+                "https://www.facebook.com/ejemplo",
+                "https://www.twitter.com/ejemplo"
+            ]
+        }
+        </script>
 </head>
 <body>
 
@@ -33,34 +50,40 @@
                     <li class="nav-item"><a class="nav-link" href="servicios.html"><strong>Servicios</strong></a></li>
                     <li class="nav-item"><a class="nav-link" href="proyectos.html"><strong>Proyectos</strong></a></li>
                     <li class="nav-item"><a class="nav-link active" href="sobremi.html"><strong>Sobre mí</strong></a></li>
-                    <li class="nav-item"><a class="nav-link" href="#testimonios"><strong>Testimonios</strong></a></li>
-                    <li class="nav-item"><a class="nav-link" href="#contacto"><strong>Contacto</strong></a></li>
+                    <li class="nav-item"><a class="nav-link" href="testimonios.html"><strong>Testimonios</strong></a></li>
+                    <li class="nav-item"><a class="nav-link" href="contacto.html"><strong>Contacto</strong></a></li>
                 </ul>
             </div>
         </div>
     </nav>
 
-     <!-- Sección Sobre mí -->
-     <section id="sobremi" class="text-white py-5" style="background-color: #000000;">
+     <!-- Sección Sobre Nosotros -->
+     <section id="sobrenosotros" class="text-white py-5" style="background-color: #000000;">
         <div class="container">
-            <h1 class="text-center mb-4">Sobre mí</h1>
-            <h2>¡Hola! Soy Ismael Achamrouk</h2>
-            <p class="lead">Bienvenido a Epic Customs. Soy un apasionado de los autos y la personalización automotriz. A lo largo de los años, he trabajado en varios proyectos de personalización que van desde el ajuste de motores hasta la transformación estética completa de vehículos. Mi objetivo es brindar un servicio que no solo cumpla con las expectativas de mis clientes, sino que las supere. Cada proyecto que llevo a cabo está diseñado para ser único, justo como cada vehículo.</p>
+            <h1 class="text-center mb-4"><em>Sobre Nosotros</em></h1>
+            <h2>¡Hola! Bienvenido a Epic Customs.</h2>
+            <p class="lead">Somos un equipo apasionado por los autos y la personalización automotriz. A lo largo de los años, hemos trabajado en varios proyectos de personalización que van desde 
+                el ajuste de motores hasta la transformación estética completa de vehículos. Nuestro objetivo es brindar un servicio que no solo cumpla con las expectativas de nuestros clientes, 
+                sino que las supere. Cada proyecto que llevamos a cabo está diseñado para ser único, justo como cada vehículo.</p>
             
             <br>
 
-            <h3>Mi experiencia</h3>
-            <p class="lead">He trabajado con una amplia gama de vehículos, desde modelos deportivos hasta clásicos, siempre buscando la perfección en cada detalle. Mi experiencia abarca desde la instalación de sistemas de sonido de alta gama hasta modificaciones de suspensión, sistemas de escape, y más. Me considero un perfeccionista en todo lo que hago, siempre buscando los mejores materiales y técnicas para lograr los resultados más impresionantes.</p>
+            <h3>Nuestra experiencia</h3>
+            <p class="lead">Hemos trabajado con una amplia gama de vehículos, desde modelos deportivos hasta clásicos, siempre buscando la perfección en cada detalle. Nuestra experiencia abarca 
+                desde la instalación de sistemas de sonido de alta gama hasta modificaciones de suspensión, sistemas de escape, y más. Nos consideramos perfeccionistas en todo lo que hacemos, 
+                siempre buscando los mejores materiales y técnicas para lograr los resultados más impresionantes.</p>
 
             <br>
 
-            <h3>Mi filosofía</h3>
-            <p class="lead">Creo que un automóvil es mucho más que un simple medio de transporte, es una extensión de la personalidad de su dueño. Por eso, cada proyecto lo trato como si fuera mío, buscando siempre una combinación perfecta entre funcionalidad, estética y exclusividad. No importa el tamaño del proyecto, cada detalle importa.</p>
+            <h3>Nuestra filosofía</h3>
+            <p class="lead">Creemos que un automóvil es mucho más que un simple medio de transporte, es una extensión de la personalidad de su dueño. Por eso, cada proyecto lo tratamos como si 
+                fuera nuestro, buscando siempre una combinación perfecta entre funcionalidad, estética y exclusividad. No importa el tamaño del proyecto, cada detalle importa.</p>
         </div>
     </section>
 
     <!-- Sección Sobre mí -->
     <section id="sobremi" class="py-5" style="background-color: #000000;">
+        <h1 class="text-center mb-4">Sobre Mí</h1>
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
@@ -71,17 +94,62 @@
                     <p class="lead">Bienvenido a Epic Customs. Soy un apasionado del mundo del tuning y la personalización de vehículos. Desde pequeño me ha fascinado el diseño y la ingeniería automotriz, y a lo largo de los años he desarrollado mis habilidades en la creación de proyectos únicos y exclusivos.</p>
                     <p>Mi objetivo es transformar cada vehículo que pasa por mis manos, creando algo que no solo sea estéticamente impresionante, sino también funcional y con un rendimiento excepcional. Cada proyecto es una oportunidad para dar rienda suelta a mi creatividad y llevar la personalización de coches a un nivel superior.</p>
                     <p>Si quieres saber más sobre mi experiencia o los proyectos en los que he trabajado, no dudes en contactarme. ¡Estoy aquí para hacer realidad tus ideas!</p>
+                <!-- Botón de contacto -->
+                <div class="text-center mt-4">
+                    <a href="contacto.html" class="btn btn-primary btn-lg">Contacta conmigo</a>
+                </div>
                 </div>
             </div>
         </div>
     </section>
 
     <!-- Footer -->
-    <footer class="text-center bg-dark text-white py-4">
-        <div class="container">
-            <p>&copy; 2024 EpicCustoms. Todos los derechos reservados.</p>
+<footer class="footer bg-dark text-white py-5">
+    <div class="container">
+        <div class="row">
+            <!-- Sección de Navegación -->
+            <div class="col-md-4">
+                <h5>Epic Customs</h5>
+                <ul class="list-unstyled">
+                    <li><a href="index.html" class="text-white text-decoration-none">Inicio</a></li>
+                    <li><a href="servicios.html" class="text-white text-decoration-none">Servicios</a></li>
+                    <li><a href="proyectos.html" class="text-white text-decoration-none">Proyectos</a></li>
+                    <li><a href="contacto.html" class="text-white text-decoration-none">Contacto</a></li>
+                </ul>
+            </div>
+
+            <!-- Sección de Redes Sociales -->
+            <div class="col-md-4 text-center">
+                <h5>Síguenos</h5>
+                <div>
+                    <a href="https://facebook.com" class="text-white me-3"><i class="fab fa-facebook fa-lg"></i></a>
+                    <a href="https://instagram.com" class="text-white me-3"><i class="fab fa-instagram fa-lg"></i></a>
+                    <a href="https://twitter.com" class="text-white"><i class="fab fa-twitter fa-lg"></i></a>
+                </div>
+            </div>
+
+            <!-- Sección de Información -->
+            <div class="col-md-4 text-md-end">
+                <h5>Contacto</h5>
+                <p>Email: <a href="mailto:info@epiccustoms.com" class="text-white text-decoration-none">info@epiccustoms.com</a></p>
+                <p>Teléfono: <a href="tel:+123456789" class="text-white text-decoration-none">+34 123 456 789</a></p>
+                <p>&copy; 2024 Epic Customs. Todos los derechos reservados.</p>
+            </div>
+
+            <!-- Información de LOPD y RGPD -->
+            <div class="mt-3 text-center">
+                <p><strong><em>Política de Privacidad y Protección de Datos</em></strong></p>
+                <p>En cumplimiento de la <strong>LOPD</strong> y el <strong>RGPD</strong>, en Epic Customs nos comprometemos a proteger 
+                    tu privacidad y la de todos nuestros usuarios. Los datos personales que nos proporcionas serán tratados con estricta confidencialidad y serán utilizados 
+                    únicamente para responder a tus consultas y ofrecer nuestros servicios.</p>
+                <p>Para más información sobre cómo tratamos tus datos personales, consulta nuestra <a href="politica_privacidad.html" class="text-white"><strong><em>Política de Privacidad</em></strong></a>.</p>
+                <p>Al continuar navegando en nuestra página web, aceptas nuestra política de privacidad y 
+                    el uso de cookies según nuestra <a href="politica_cookies.html" class="text-white"><strong><em>Política de Cookies</em></strong></a>.</p>
+            </div>
+
         </div>
-    </footer>
+    </div>
+</footer>
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
